# simple-geyser

./: Cargo.toml  config.json  readme.md
c_plugin/: base_58.h  contact_info.h  lib.h  simple_geyser_plugin.c
src/: lib.rs  plugin.rs
